dark mode fixes

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -30,8 +30,8 @@
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-heading: inherit;
+  --color-text: inherit;
 
   --section-gap: 160px;
 }
@@ -45,8 +45,8 @@
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --color-heading: inherit;
+    --color-text: inherit;
   }
 }
 
@@ -72,7 +72,7 @@ html {
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: inherit;
   background: var(--color-background);
   transition:
     color 0.5s,
